--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ p {
 
 /* Hero Section */
 #hero {
-	background-image: url(./img/header-bg.jpg);
+	background-image: url(./img/head-img.jpg);
 	background-size: cover;
 	background-position: top center;
 	position: relative;
@@ -292,7 +292,7 @@ p {
 	flex-direction: column;
 	padding: 30px;
 	border-radius: 10px;
-	background-image: url(./img/img-1.png);
+	background-image: url(./img/services-img.png);
 	background-size: cover;
 	margin: 10px 5%;
 	position: relative;
